syntax = "proto3";

import "v2ray.com/core/common/net/address.proto";
import "v2ray.com/core/common/protocol/user.proto";

package com.v2ray.core.common.protocol;
option go_package = "protocol";

message ServerSpecPB {
  com.v2ray.core.common.net.AddressPB address = 1;
  uint32 port = 2;
  repeated com.v2ray.core.common.protocol.User users = 3;
}